Update about section with detailed MERN stack info
Expanded the 'About Me' section to include detailed information about MERN stack development skills, technologies learned, and practical experience gained at SMIT. This provides a clearer overview of current expertise and training.

--- a/Class 2/index.html
+++ b/Class 2/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>UMER MEMON</h1>
-    <p>I am a Student Of SMIT (Saylani Mass I.T Training)</p>
+    <h3>About Me</h3>
+    <p>I am currently pursuing MERN Stack Development at SMIT (Saylani Mass IT Training), 
+        one of the leading IT training institutes in Pakistan. Through this program, I have 
+        gained hands-on experience in HTML, CSS, JavaScript, React.js, Next.js, Node.js, 
+        Express.js, and MongoDB, along with practical training in version control, 
+        API integration, and deployment platforms like Netlify and Vercel. This education 
+        has strengthened my foundation in full-stack web development and equipped me with 
+        the skills to build responsive, scalable, and real-world applications while 
+        continuously learning and applying modern industry practices.</p>
     <br>
     <i>I am Learning Web Development</i>
     <strong>A Mern Stack Developer</strong>
